# ml-competition-template

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  main.py  make_seed_average_configs.py  pyproject.toml  requirements.txt  seed_averaging.py  stacking.py  start.sh  to_ipynb.py
.jupyter/: jupyter_notebook_config.py
config/: lgb_0.yml
config/examples/: 000_baseline.yml  046_adaptive_lr_setting.yml  049_ert.yml  050_ktb.yml  072_add_pseudo_label.yml  072_lgb_focal_loss_regression.yml  073_lgbm_071.yml  077_catboost.yml  079_svc.yml  101_stacking_lgb_no_xentropy_with_feat_1.yml  103_stacking_xgb_no_xentropy_with_feat_1.yml  105_stacking_cat_no_xentropy_with_feat_1.yml  21_catboost.yml  25_ert_classifer.yml  26_rfg_classifer.yml  29_lgbm_stacking.yml  add_day_by_day_shift_feats.yml  baseline.yml
input/: convert_config.yml  convert_to_feather.py  convert_to_pickle.py  create_train_test.py  data_download.sh  train_test_config.yml
src/ensemble/: blending.py
src/evaluation/: __init__.py  cat.py  lgbm.py  metrics.py  optimization.py  truncate.py
src/features/: LabelEncoding.py  __init__.py  agg_sub_target_groupby_category.py  base.py  basic.py  category_group_vectorizer.py  category_vectorizer.py  category_w2v.py  concat_category.py  groupby_concat_cat.py  groupby_developer.py  groupby_genre.py  groupby_name.py  groupby_platform.py  groupby_publisher.py  groupby_rating.py  groupby_year.py  modules.py  params.py  spectrum.py  spectrum_kshape.py  spectrum_peaks.py  spectrum_peaks_50pct.py  statistics.py  target.py  tsfresh.py  x_serial_num_per.py
src/models/: __init__.py  base.py  cat.py  ert.py  factory.py  ktb.py  lightgbm.py  rgf.py  ridge.py  svm.py  tabnet.py  xgb.py
src/sampling/: __init__.py  factory.py
src/utils/: __init__.py  arguments.py  checker.py  config.py  dataframe.py  duplicate.py  file_io.py  jsonutil.py  logger.py  make_submission.py  seed_everything.py  slack.py  timer.py  tools.py  visualization.py
src/validation/: __init__.py  factory.py  feature_selection.py
